kustomize/ghost/ghost-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost-db
  template:
    metadata:
      labels:
        app: ghost-db
    spec:
      containers:
        - name: mariadb
          image: mariadb:11
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db-data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: ghost-db-pvc
