kustomize/ghost/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ghost-service
spec:
  selector:
    app: ghost
  ports:
  - protocol: TCP
    port: 80
    targetPort: 2368
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: ghost-db
spec:
  selector:
    app: ghost-db
  ports:
    - port: 3306
      targetPort: 3306
